Temporary alignment fix

--- a/imagersite/imagersite/static/css/facetagger.css
+++ b/imagersite/imagersite/static/css/facetagger.css
@@ -1,7 +1,7 @@
 #photo-container
 {
 	position: relative;
-	text-align: center;
+/*	text-align: center;*/
 }
 
 #photo-container img
